# Auto-Slack-Avatar

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.deploy  Makefile  NOTICE  README.md  docker-compose.gcloud-user.yml  docker-compose.gcp-sa.yml  docker-compose.yml  prompts.json  pyproject.toml  requirements.txt  vacations.example.json
scripts/: check-required-gcp-apis.sh  deploy-job.sh  deploy-scheduler.sh  docker-push.sh  gcloud-auth-from-credentials.sh  job-run.sh  load-dotenv.sh  write_runtime_env_yaml.py
src/: __init__.py  config.py  gemini_image.py  gemini_title.py  output_paths.py  prompts_json.py  run_daily.py  select_assets.py  slack_photo.py  slack_profile.py  vacations_json.py
